syntax = "proto3";

message Browse {
  ResponseContext responseContext = 1;
  n1F9 n1F9 = 9;
  n1F10 n1F10 = 10;

}
message ResponseContext{
  repeated  ServiceTrackingParams serviceTrackingParams = 6;
}
message ServiceTrackingParams{
  int32 service = 1;
  repeated Params params = 2;
}
message Params{
  string key = 1;
  string value = 2;
}
message n1F9 {
  m2F58173949 m2F58173949 = 58173949;
  n6F153515154 n6F153515154 = 153515154;
  n2F49399797 n2F49399797 = 49399797;
}
message n1F10 {
  n2F49399797 n2F49399797 = 49399797;
}
message m2F58173949 {
  repeated m3F1 m3F1 = 1;
}
message m3F1 {
  m4F58174010 m4F58174010 = 58174010;
}
message m4F58174010 {
  n1F10 n1F10 = 4;
}

message n2F49399797 {
  repeated n3F1 n3F1 = 1;
}

message n3F1 {
  n4F50195462 n4F50195462 = 50195462;
  n4F51845067 n4F51845067 = 51845067;
  n4F221496734 m4F221496734 = 221496734;
}

message n4F50195462 {
  repeated n5F1 n5F1 = 1;
}

message n4F51845067 {
  n5F5 n5F5 = 5;
}

message n4F221496734{
  n5F3 n5F3 = 3;
  n5F10 n5F10 = 10;
}
message n5F1 {
  n6F153515154 n6F153515154 = 153515154;
}
message n5F3{
  n6F1 n6F1 = 1;
}
message n5F5 {
  n6F51431404 n6F51431404 = 51431404;
}

message n6F1 {
  string staticLyric = 1;

}
message n6F153515154 {
  n7F172660663 n7F172660663 = 172660663;
}
message n6F51431404 {
  repeated n5F1 n5F1 = 1;
}

message n7F172660663 {
  n8F1 n8F1 = 1;
  n8F2 n8F2 = 2;
  n8F3 n8F3 = 3;
}
message n5F10{
  Origin origin = 1;
}
message n8F1 {
  n9F168777401 n9F168777401 = 168777401;
}

message n8F2 {
  n9F183314536 n9F183314536 = 183314536;
}
message n8F3 {
  n8F1 n8F1 = 1;
  n8F2 n8F2 = 2;
}
message Origin{
  string originText = 1;
}
message n9F168777401 {
  n10F3 n10F3 = 3;
  n10F5 n10F5 = 5;
}
message n9F183314536 {
  string type = 1;
}
message n10F3 {
  n11F172035250 n11F172035250 = 172035250;
}
message n10F5{
  n11F465160965 n11F465160965 = 465160965;
}
message n11F465160965{
  n12F4 n12F4 = 4;
}
message n12F4{
  repeated n13F1 n13F1 = 1;
  string originText = 2;
}
message n13F1{
  string f1 = 1;
}
message n11F172035250 {
  string type = 1;
}

message Next {
  a1F7 a1F7 = 7;
  a1F8 a1F8 = 8;
}

message a1F7 {
  a2F51779735 a2F51779735 = 51779735;
  MusicPlayRender musicPlayRender = 125354411;
}

message a1F8 {
  n2F49399797 n2F49399797 = 49399797;
}
message MusicPlayRender{
  BottomRender bottomRender = 7;
}

message BottomRender{
  SectionTab sectionTab = 91700600;
}

message SectionTab{
  repeated Item items = 1;
}

message Item{
  Tab tab = 58174010;
}

message Tab{
  Info info = 1;
  string name = 2;
}

message Info{
  BrowseInfo BrowseInfo = 48687626;
}
message BrowseInfo{
  string browseId = 2;
}

message a2F51779735 {
  a3F1 a3F1 = 1;
}

message a3F1 {
  n2F49399797 n2F49399797 = 49399797;
}

message Search {
  s1F4 s1F4 = 4;
  s1F7 s1F7 = 7;
}

message s1F4 {
  n2F49399797 n2F49399797 = 49399797;
}

message s1F7 {
  n4F50195462 n4F50195462 = 50195462;
  n2F49399797 n2F49399797 = 49399797;
}

message Shorts {
  repeated Entry entries = 2;
}

message Entry {
  Command command = 1;
}

message Command {
  ReelWatchEndpoint reelWatchEndpoint = 139608561;
}

message ReelWatchEndpoint {
  Overlay overlay = 8;
}

message Overlay {
  ReelPlayerOverlayRenderer reelPlayerOverlayRenderer = 139970731;
}

message ReelPlayerOverlayRenderer{
  int32 style = 12;
}


message Guide {
  repeated GuideItem guideItem4 = 4;
  repeated GuideItem guideItem6 = 6;
}
message GuideItem {
  GuideSectionRenderer guideSectionRenderer = 117866661;
}
message GuideSectionRenderer {
  repeated RendererItem rendererItems = 1;
}
message RendererItem {
  guideEntryRenderer iconRender = 318370163;
  guideEntryRenderer labelRender = 117501096;
}
message guideEntryRenderer {
  string browseId = 1;
}

message Player {
  repeated AdPlacement adPlacements = 7;
  PlayabilityStatus playabilityStatus = 2;
  Captions captions = 10 [json_name = "captions"];
}
message AdPlacement {
  AdPlacementRenderer adPlacementRenderer = 84813246;
}
message AdPlacementRenderer {
  string params = 4;
}
message PlayabilityStatus{
  PIPAbility pipAbility = 21;
  BackgroundAbility backgroundAbility = 11;
}
message PIPAbility{
  PIPlayer piplayer = 151635310;
}
message  BackgroundAbility{
  BackgroundPlayer backgroundPlayer = 64657230;
}
message PIPlayer{
  bool active = 1;
}
message BackgroundPlayer{
  bool active = 1;
}
message Captions {
  PlayerCaptionsTracklistRenderer playerCaptionsTracklistRenderer = 51621377 [json_name = "playerCaptionsTracklistRenderer"];
};
message PlayerCaptionsTracklistRenderer {
  repeated CaptionTrack captionTracks = 1 [json_name = "captionTracks"];
  repeated AudioTrack audioTracks = 2 [json_name = "audioTracks"];
  repeated TranslationLanguage translationLanguages = 3 [json_name = "translationLanguages"];
  optional int32 defaultAudioTrackIndex = 4 [json_name = "defaultAudioTrackIndex"];
  optional int32 defaultCaptionTrackIndex = 6 [json_name = "defaultCaptionTrackIndex"];
};
message CaptionTrack {
  string baseUrl = 1 [json_name = "baseUrl"];
  Name name = 2 [json_name = "name"];
  string vssId = 3 [json_name = "vssId"];
  string languageCode = 4 [json_name = "languageCode"];
  optional string kind = 5 [json_name = "kind"];
  optional bool rtl = 6 [json_name = "rtl"];
  bool isTranslatable = 7 [json_name = "isTranslatable"];
};

message AudioTrack {
  repeated int32 captionTrackIndices = 2 [json_name = "captionTrackIndices", packed = false];
  optional int32 defaultCaptionTrackIndex = 3 [json_name = "defaultCaptionTrackIndex"];
  optional int32 forcedCaptionTrackIndex = 4 [json_name = "forcedCaptionTrackIndex"];
  optional int32 visibility = 5 [json_name = "visibility"];
  optional bool hasDefaultTrack = 6 [json_name = "hasDefaultTrack"];
  optional bool hasForcedTrack = 7 [json_name = "hasForcedTrack"];
  optional string audioTrackId = 8 [json_name = "audioTrackId"];
  optional int32 captionsInitialState = 11 [json_name = "captionsInitialState"];
};

message TranslationLanguage {
  string languageCode = 1 [json_name = "languageCode"];
  Name languageName = 2 [json_name = "languageName"];
};

message Name {
  repeated Runs runs = 1 [json_name = "runs"];
  message Runs {
    string text = 1 [json_name = "text"];
  };
};

message Setting{
  repeated SettingItem settingItems = 6;
//  St1F7 st1F7 = 7;
  TrackingParams trackingParams = 10;
}

message SettingItem{
  SettingCategoryEntryRenderer settingCategoryEntryRenderer = 88478200;
  SettingCategoryCollectionRenderer settingCategoryCollectionRenderer = 66930374;
}
//message  St1F7{
//  SettingCategoryEntryRenderer settingCategoryEntryRenderer = 88478200;
//}
message TrackingParams{
  int32 f1 = 1;
  int32 f2 = 2;
  int32 f3 = 3;
  TimeInfo timeInfo = 4;
}

message TimeInfo{
  uint64 timestamp = 1 [jstype = JS_STRING];
  fixed32 f2 = 2;
  fixed32 f3 = 3;
}
message SettingCategoryEntryRenderer{
  int32 f2 = 2;
  int32 f3 = 3;
  TrackingParams trackingParams = 5;
  int32 f6 = 6;
  int32 f7 = 7;
  int32 f8 = 8;
  int32 f9 = 9;
  int32 f10 = 10;
  int32 f12 = 12;
}
message SettingCategoryCollectionRenderer{
  repeated SubSetting subSettings = 3;
  int32 categoryId = 4;
}


message SubSetting{
  SettingBooleanRenderer settingBooleanRenderer = 61331416;
}

message SettingBooleanRenderer{
  ServiceEndpoint enableServiceEndpoint = 5;
  ServiceEndpoint disableServiceEndpoint = 6;
  TrackingParams clickTrackingParams = 13;
  int32 itemId = 15;
}
message ServiceEndpoint{
  TrackingParams trackingParams = 2;
  SetClientSettingEndpoint setClientSettingEndpoint = 81212182;
}
message SetClientSettingEndpoint{
  SettingDatas settingDatas = 1;
}
message SettingDatas{
  ClientSettingEnum clientSettingEnum = 1;
  bool boolValue = 3;
}
message ClientSettingEnum{
  int32 item = 1;
}
